--- a/_notebooks/2022-08-22-First-Notebook.ipynb
+++ b/_notebooks/2022-08-22-First-Notebook.ipynb
@@ -20,6 +20,15 @@
     "# Title\n",
     "Here is some text"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('HELLO')"
+   ]
   }
  ],
  "metadata": {
