--- a/_notebooks/2022-08-22-First-Notebook.ipynb
+++ b/_notebooks/2022-08-22-First-Notebook.ipynb
@@ -23,9 +23,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HELLO\n"
+     ]
+    }
+   ],
    "source": [
     "print('HELLO')"
    ]
@@ -38,7 +46,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.10"
   },
   "orig_nbformat": 4,
