--- a/_notebooks/2022-08-24-Better-Python-Quiz.ipynb
+++ b/_notebooks/2022-08-24-Better-Python-Quiz.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "- toc: true \n",
     "- badges: true\n",
-    "- comments: false\n",
+    "- comments: true\n",
     "- categories: [jupyter], [python]"
    ]
   },
