please dont break

--- a/_notebooks/2022-08-25-Better-Python-Quiz.ipynb
+++ b/_notebooks/2022-08-25-Better-Python-Quiz.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "source": [
     "## The Quiz\n",
-    "This quiz is good. It uses variables to store the questions and answers, so you can change them right at the top of the file, all in one place. It also has 2 integers for tracking the amount of questions and how many correct answers\n",
+    "This quiz uses variables to store the questions and answers, so you can change them right at the top of the file, all in one place. It also has 2 integers for tracking the amount of questions and how many correct answers\n",
     "\n",
     "It also uses a for loop to iterate between these lists, changing the amount of correct answers if you get one correct.\n",
     "\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -35,16 +35,16 @@
      "output_type": "stream",
      "text": [
       "What command is used to include other functions that are developed?\n",
-      "'def' is right :)\n",
+      "'import' is right :)\n",
       "What command in this example is used to evaluate a response?\n",
       "'if' is right :)\n",
       "Each 'if' command contains an '_________' to determine a true or false condition?\n",
       "'expression' is right :)\n",
       "What function is used to turn an int into a string?\n",
-      "'str' is right :)\n",
-      "What takes code someone else made so you can use it in your code?\n",
-      "'import' is right :)\n",
-      "You got 100.0% of the questions correct\n"
+      "no, 'toString()' is incorrect, 'str' is right\n",
+      "What is keyword is used to make functions?\n",
+      "'def' is right :)\n",
+      "You got 80.0% of the questions correct\n"
      ]
     }
    ],
@@ -54,38 +54,47 @@
     "secondQ = 'What command in this example is used to evaluate a response?'\n",
     "thirdQ = \"Each 'if' command contains an '_________' to determine a true or false condition?\"\n",
     "fourthQ = \"What function is used to turn an int into a string?\"\n",
-    "fifthQ = \"What takes code someone else made so you can use it in your code?\"\n",
+    "fifthQ = \"What is keyword is used to make functions?\"\n",
     "\n",
     "# Questions in a list\n",
     "questions = [firstQ, secondQ, thirdQ, fourthQ, fifthQ]\n",
     "\n",
     "# All of the answers\n",
-    "firstA = 'def'\n",
+    "firstA = 'import'\n",
     "secondA = 'if'\n",
     "thirdA = 'expression'\n",
     "fourthA = 'str'\n",
-    "fifthQ = 'import'\n",
+    "fifthQ = 'def'\n",
     "\n",
     "# Answers in a list\n",
     "answers = [firstA, secondA, thirdA, fourthA, fifthQ]\n",
     "\n",
-    "# Variables to be used later\n",
+    "# Amount of correct answers, starts at 0\n",
     "correct = 0\n",
+    "# Amount of questions based on how many are in the list\n",
     "questionsAmount = len(questions)\n",
     "\n",
-    "# Main execution of code, runs based on how many questions there are\n",
+    "# Main execution of code, runs based on how many questions there are.\n",
+    "# Prints the question then checks if the input is the same as the corresponding answer.\n",
     "for x in range(questionsAmount):\n",
     "    print(questions[x])\n",
-    "    resp = input()\n",
-    "    if resp == answers[x]:\n",
-    "        print(\"'\" + resp + \"' is right :)\")\n",
+    "    inp = input()\n",
+    "    if inp == answers[x]:\n",
+    "        print(\"'\" + inp + \"' is right :)\")\n",
     "        correct += 1\n",
     "    else:\n",
-    "        print('no')\n",
+    "        print(\"no, '\" + inp + \"' is incorrect, '\" + answers[x] + \"' is right\")\n",
     "\n",
     "# Ending statement\n",
     "print(\"You got \" + str((correct/questionsAmount) * 100)[0:5] + \"% of the questions correct\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
