--- a/_notebooks/2022-08-25-Better-Python-Quiz.ipynb
+++ b/_notebooks/2022-08-25-Better-Python-Quiz.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -35,16 +35,16 @@
      "output_type": "stream",
      "text": [
       "What command is used to include other functions that are developed?\n",
-      "'import' is right :)\n",
+      "no, 'if' is incorrect, 'import' is right\n",
       "What command in this example is used to evaluate a response?\n",
       "'if' is right :)\n",
       "Each 'if' command contains an '_________' to determine a true or false condition?\n",
-      "'expression' is right :)\n",
+      "no, 'if' is incorrect, 'expression' is right\n",
       "What function is used to turn an int into a string?\n",
-      "no, 'toString()' is incorrect, 'str' is right\n",
+      "no, 'if' is incorrect, 'str' is right\n",
       "What is keyword is used to make functions?\n",
-      "'def' is right :)\n",
-      "You got 80.0% of the questions correct\n"
+      "no, 'if' is incorrect, 'def' is right\n",
+      "You got 20.0% of the questions correct\n"
      ]
     }
    ],
@@ -78,7 +78,7 @@
     "# Prints the question then checks if the input is the same as the corresponding answer.\n",
     "for x in range(questionsAmount):\n",
     "    print(questions[x])\n",
-    "    inp = input()\n",
+    "    inp = \"if\"\n",
     "    if inp == answers[x]:\n",
     "        print(\"'\" + inp + \"' is right :)\")\n",
     "        correct += 1\n",
