--- a/_notebooks/2022-08-26-New-Quiz.ipynb
+++ b/_notebooks/2022-08-26-New-Quiz.ipynb
@@ -27,9 +27,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What command is used to include other functions that are developed?\n",
+      "'def' is right :)\n",
+      "What command in this example is used to evaluate a response?\n",
+      "'if' is right :)\n",
+      "Each 'if' command contains an '_________' to determine a true or false condition?\n",
+      "'expression' is right :)\n",
+      "What function is used to turn an int into a string?\n",
+      "No, 'toString()' is incorrect, 'str' is correct\n",
+      "What takes code someone else made so you can use it in your code?\n",
+      "'import' is right :)\n",
+      "You got 80.0% of the questions correct\n"
+     ]
+    }
+   ],
    "source": [
     "# All of the questions as strings\n",
     "firstQ = 'What command is used to include other functions that are developed?'\n",
@@ -63,7 +81,7 @@
     "        print(\"'\" + resp + \"' is right :)\")\n",
     "        correct += 1\n",
     "    else:\n",
-    "        print('no')\n",
+    "        print('No, ' + \"'\" + resp + \"' is incorrect, '\" + answers[x] + \"' is correct\")\n",
     "\n",
     "# Ending statement\n",
     "print(\"You got \" + str((correct/questionsAmount) * 100)[0:5] + \"% of the questions correct\")"
@@ -77,7 +95,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.10"
   },
   "orig_nbformat": 4,
