--- a/_notebooks/2022-09-06-InfoDbWork.ipynb
+++ b/_notebooks/2022-09-06-InfoDbWork.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# InfoDb Input\n",
-    "> Description\n",
+    "> with input!\n",
     "\n",
     "- toc: true\n",
     "- badges: true\n",
@@ -19,7 +19,7 @@
    "source": [
     "## The Contents\n",
     "\n",
-    "This code has a list of dictionaries, the first of which is full of data and the second is empty. The loop takes the keys and asks you what you want to assign them to. It then prints that data in a easy to understand way."
+    "This code has a list of dictionaries, the first of which is full of data and the second is empty. The loop takes the keys and asks you what you want to assign them to. It then prints that data in a easy to understand way. sssssss\n"
    ]
   },
   {
