--- a/_posts/2022-09-12-applab.md
+++ b/_posts/2022-09-12-applab.md
@@ -14,3 +14,5 @@ I was thinking about using random number generation to make one of the questions
 ## Design
 Instead of using the Design page, I decided to use Google Drawings to make my Blog, and then import the images into the code. I had to change the dimensions of the drawing in order to make it fit perfectly in the phone template.
 ![]({{ site.baseurl }}/images/customBorder.png)
+## Problems
+The first question went by really quick, but then I realized I needed two more, and I had to restructure my code in order to allow more questions. I really struggled with the block code format as it made it hard to visualize my code.
