--- a/_notebooks/2022-09-12-createTask.ipynb
+++ b/_notebooks/2022-09-12-createTask.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create Task\n",
+    "# Create Task\n",
     "> The Create Task Blog\n",
     "\n",
     "- toc: true \n",
@@ -28,10 +28,21 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.8.10 64-bit",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.8.10"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
