--- a/_notebooks/2022-11-30-teaching-time.ipynb
+++ b/_notebooks/2022-11-30-teaching-time.ipynb
@@ -64,15 +64,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "grade1 = 90\n",
     "grade2 = 65\n",
     "grade3 = 60\n",
     "grade4 = 75\n",
-    "grade5 = 95"
+    "grade5 = 95\n",
+    "\n",
+    "ifAvg = ((grade1 + grade2 + grade3 + grade4)/4) > 80\n",
+    "print(ifAvg)\n",
+    "\n"
    ]
   },
   {
@@ -84,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -150,22 +162,28 @@
      "output_type": "stream",
      "text": [
       "1 > 2 or 5 < 12:\n",
+      "True\n",
       "24 > 8:\n",
-      "10 > 20:\n"
+      "False\n",
+      "10 > 20:\n",
+      "False\n"
      ]
     }
    ],
    "source": [
     "# Output TRUE  using OR\n",
     "print(\"1 > 2 or 5 < 12:\",)\n",
+    "print ((1 > 2) | (5 < 12))\n",
     "# Output TRUE  using OR ^\n",
     "\n",
     "\n",
     "# Output FALSE using NOT\n",
     "print(\"24 > 8:\",)\n",
+    "print(not 24 > 8)\n",
     "\n",
     "# Output FALSE using AND\n",
-    "print(\"10 > 20:\",)"
+    "print(\"10 > 20:\",)\n",
+    "print(10 > 20 and False)"
    ]
   },
   {
@@ -256,13 +274,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "130\n"
+     ]
+    }
+   ],
    "source": [
-    "num1 =\n",
-    "num2 =\n",
-    "sum = num1 + num2"
+    "num1 = 120\n",
+    "num2 = 80\n",
+    "sum = num1 + num2\n",
+    "if (sum == 200):\n",
+    "    print(\"the sum is 200\")\n",
+    "else:\n",
+    "    print(sum)"
    ]
   },
   {
@@ -394,18 +424,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is a cheap product\n"
+     ]
+    }
+   ],
    "source": [
     "# Feel free to use JS or Python - we won't discriminate whilst grading you!\n",
     "# Here is a python template for you to use.\n",
     "\n",
-    "= ; \n",
-    "if (): \n",
-    "    print(\"\"); \n",
-    "else: \n",
-    "    print(\"\"); "
+    "expired=False\n",
+    "cost = 27\n",
+    "\n",
+    "if(expired):\n",
+    "    print(\"this product is no good\")\n",
+    "else:\n",
+    "    if (cost > 50): \n",
+    "        print(\"this product is too expensive\"); \n",
+    "    elif(cost > 25):\n",
+    "        print(\"this is a regular product\")\n",
+    "    else:\n",
+    "        print(\"this is a cheap product\")"
    ]
   },
   {
@@ -421,11 +466,63 @@
     "    - has at least 3 questions\n",
     "- Points will be awarded for creativity, intricacy, and how well Boolean/Binary concepts have been intertwined"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You Got It Wrong\n",
+      "You Got It Wrong\n",
+      "You Got It Wrong\n",
+      "bad\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "right = 0\n",
+    "for each in range(0, 3):\n",
+    "    inp = input(\"Is it 'True' or 'False'?\")\n",
+    "    ansInt = random.randint(0, 1)\n",
+    "    ansR = str(ansInt > 0.5)\n",
+    "    ansW = str(ansInt < 0.5)\n",
+    "    if(inp == ansR):\n",
+    "        print(\"You Got It Right\")\n",
+    "        right += 1\n",
+    "    elif(inp == ansW):\n",
+    "        print(\"You Got It Wrong\")\n",
+    "    else:\n",
+    "        print(\"please just leave\")\n",
+    "if (right == 3):\n",
+    "    print(\"good\")\n",
+    "else:\n",
+    "    print(\"bad\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -444,7 +541,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "40d3a090f54c6569ab1632332b64b2c03c39dcf918b08424e98f38b5ae0af88f"
+    "hash": "0324bdc6d0dda31d2e044164ff9618807e4511392db47dfcc9eb3e8251956324"
    }
   }
  },
