--- a/_notebooks/2022-12-02-Group3.ipynb
+++ b/_notebooks/2022-12-02-Group3.ipynb
@@ -8,9 +8,10 @@
     "> Welcome to the World of Booleans and Conditionals!\n",
     "\n",
     "- title: Teaching Plan - Booleans and Conditionals\n",
-    "- toc: false\n",
-    "- badges: false\n",
-    "- categories: [notebook]"
+    "- toc: true\n",
+    "- badges: true\n",
+    "- comments: true\n",
+    "- categories: [jupyter]\n"
    ]
   },
   {
