--- a/_notebooks/2022-12-02-Group3.ipynb
+++ b/_notebooks/2022-12-02-Group3.ipynb
@@ -7,11 +7,9 @@
     "# Unit 3 Sections 5-7\n",
     "> Welcome to the World of Booleans and Conditionals!\n",
     "\n",
-    "- title: Teaching Plan - Booleans and Conditionals\n",
     "- toc: true\n",
     "- badges: true\n",
-    "- comments: true\n",
-    "- categories: [jupyter]\n"
+    "- comments: true\n"
    ]
   },
   {
