--- a/_notebooks/2022-12-02-Group3.ipynb
+++ b/_notebooks/2022-12-02-Group3.ipynb
@@ -1,17 +1,17 @@
 {
  "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Unit 3 Sections 5-7\n",
-    "> Welcome to the World of Booleans and Conditionals!\n",
-    "\n",
-    "- toc: true\n",
-    "- badges: true\n",
-    "- comments: true\n"
-   ]
-  },
+    {
+    "cell_type": "markdown",
+    "metadata": {},
+    "source": [
+        "# Group 3 Thing\n",
+        "\n",
+        "- toc: true\n",
+        "- badges: true\n",
+        "- comments: true\n",
+        "- categories: [jupyter]"
+    ]
+    },
   {
    "cell_type": "markdown",
    "metadata": {},
