--- a/_notebooks/2022-12-07-developing-procedures.ipynb
+++ b/_notebooks/2022-12-07-developing-procedures.ipynb
@@ -22,19 +22,19 @@
     "## Calling Procedures\n",
     "\n",
     "Slide 1:\n",
-    "- A _______ is a named group of programming instructions that may have parameters and return values.\n",
-    "- Procedures are referred to by different names, such as _______ or _______, depending on the programing language.\n",
-    "- Parameters are input values of a procedure. _______ specify the values of the parameters when procedure is called.\n",
-    "- A procedure call interrupts the _______ execution of statements causing the program to execute the statements within the procedure before continuing. One the last statement in the procedure (or a return statement) has executed, flow or control is returned to the point immediately following where the procedure was _______.\n",
+    "- A procedure is a named group of programming instructions that may have parameters and return values.\n",
+    "- Procedures are referred to by different names, such as method or function, depending on the programing language.\n",
+    "- Parameters are input values of a procedure. arguments specify the values of the parameters when procedure is called.\n",
+    "- A procedure call interrupts the sequential execution of statements causing the program to execute the statements within the procedure before continuing. One the last statement in the procedure (or a return statement) has executed, flow or control is returned to the point immediately following where the procedure was called.\n",
     "\n",
     "Slide 2:\n",
-    "- When calling procedures, it's important to take notice to whether it returns data, or a block of _______.\n",
-    "- If the procedure just returns a block of statements, you call the procedure by referring to the procedure name, and _______ the arguments.\n",
-    "- If the procedure returns some sort of data like a ______ or _______, then you will assign that value to a variable\n",
+    "- When calling procedures, it's important to take notice to whether it returns data, or a block of statements.\n",
+    "- If the procedure just returns a block of statements, you call the procedure by referring to the procedure name, and inputting the arguments.\n",
+    "- If the procedure returns some sort of data like a boolean or value, then you will assign that value to a variable\n",
     "\n",
     "Slide 3:\n",
     "\n",
-    "- Assume the Temperature outside is Fahrenheit. \n",
+    "- Assume the Temperature outlength is Fahrenheit. \n",
     "- The procedure convertFahrenheit is intended to convert from Fahrenheit to Celsius.\n",
     "- Convert the following psuedocode to python\n",
     "\n"
@@ -42,15 +42,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "34.44444444444444"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def convertFahrenheit():\n",
+    "outlengthTemp = 94\n",
+    "def convertFahrenheit(celsius):\n",
     "    # code goes here\n",
-    "    return celsius\n",
+    "    return (celsius - 32) * 5 / 9\n",
     "\n",
-    "convertFahrenheit(outsideTemp)"
+    "convertFahrenheit(outlengthTemp)"
    ]
   },
   {
@@ -62,7 +74,7 @@
     "\n",
     "Slide 8: \n",
     "\n",
-    "Picking a _______ name is important in case you revisit the code later on (separate words with capitals)\n",
+    "Picking a descriptive name is important in case you revisit the code later on (separate words with capitals)\n",
     "There are 2 different types of procedures- ones that return a value and those that simply execute a block of statements\n",
     "Steps of developing procedure: picking a useful name, thinking of parameters (what data does the procedure need to know), making a flowchart or writing procedure in pseudocode, and actually developing the procedure.\n",
     "\n",
@@ -78,16 +90,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60\n",
+      "85.0\n"
+     ]
+    }
+   ],
    "source": [
     "# procedure goes here\n",
     "\n",
-    "currentGrade <- currentPoints / 40\n",
-    "currentGrade <- current Grade * 100\n",
-    "if currentGrade > quizGrade\n",
-    "    quizGrade <- currentGrade"
+    "quizGrade = 60\n",
+    "print(quizGrade)\n",
+    "\n",
+    "def replaceGrade(currentPoints):\n",
+    "    global quizGrade\n",
+    "    currentGrade = currentPoints / 40\n",
+    "    currentGrade = currentGrade * 100\n",
+    "    if (currentGrade > quizGrade):\n",
+    "        quizGrade = currentGrade\n",
+    "\n",
+    "replaceGrade(34)\n",
+    "print(quizGrade)"
    ]
   },
   {
@@ -97,13 +126,13 @@
    "source": [
     "## Procedural Abstraction\n",
     "\n",
-    "- One type of abstraction is ________ abstraction which provides a name for a process and allows a procedure to be used only knowing what it does and not how it does it\n",
-    "- This is very helpful in managing ______ in a program\n",
-    "- Subdivision of a program into separate subprograms is called ________\n",
-    "- A procedural abstraction may ________ shared features to generalize functionality instead of duplicating code. This allows for program reuse, which helps manage complexity\n",
+    "- One type of abstraction is procedural abstraction which provides a name for a process and allows a procedure to be used only knowing what it does and not how it does it\n",
+    "- This is very helpful in managing complexity in a program\n",
+    "- Subdivision of a program into separate subprograms is called modularity\n",
+    "- A procedural abstraction may extract shared features to generalize functionality instead of duplicating code. This allows for program reuse, which helps manage complexity\n",
     "- When a pre-written procedure is called, you don’t necessarily need to know the details of this, just what it does and how to call it\n",
-    "- Simply, procedural abstraction is naming and calling a ________ procedure\n",
-    "- Making sure to include the right arguments so the ________ can do what its supposed to do is crucial"
+    "- Simply, procedural abstraction is naming and calling a prewritten procedure\n",
+    "- Making sure to include the right arguments so the procedure can do what its supposed to do is crucial"
    ]
   },
   {
@@ -149,15 +178,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.999999999999998\n"
+     ]
+    }
+   ],
    "source": [
-    "def procedure()\n",
-    "    # code goes here\n",
-    "    return \n",
+    "import math\n",
+    "angle = 1\n",
+    "length = 0\n",
     "\n",
-    "# code goes here"
+    "def findOpp(angle, hypotenuse):\n",
+    "    return math.sin(angle) * hypotenuse\n",
+    "\n",
+    "def findAdj(angle, hypotenuse):\n",
+    "    return math.cos(angle) * hypotenuse\n",
+    "\n",
+    "def findHypAdj(angle, adjacent):\n",
+    "    return adjacent / math.cos(angle)\n",
+    "\n",
+    "def findHypOpp(angle, opposite):\n",
+    "    return opposite / math.sin(angle)\n",
+    "\n",
+    "\n",
+    "side = input(\"Do you want to find the Hypotenuse, Opposite, or Adjacent? (If hypotenuse, do h then a side o or a)\")\n",
+    "length = int(input(\"What is the length of this side?\"))\n",
+    "angle = int(input(\"What is the angle? \"))\n",
+    "\n",
+    "angle *= math.pi/180\n",
+    "\n",
+    "methods = {\n",
+    "    \"o\" : findOpp(angle, length),\n",
+    "    \"a\" : findAdj(angle, length),\n",
+    "    \"h, a\": findHypAdj(angle, length),\n",
+    "    \"h, o\" : findHypOpp(angle, length),\n",
+    "}\n",
+    "\n",
+    "print(methods[side])\n",
+    "\n"
    ]
   }
  ],
@@ -168,7 +232,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.10"
   },
   "orig_nbformat": 4,
