--- a/_notebooks/2022-12-06-lessonComplete.ipynb
+++ b/_notebooks/2022-12-06-lessonComplete.ipynb
@@ -68,10 +68,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![f](../images/lesson1.png)\n",
+    "\n",
     "\n",
     "The pseudocode above is translated to python for you. \n",
     "\n",
@@ -121,6 +122,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -144,7 +146,6 @@
     "\n",
     "Can either Boolean expression on the right replace the conditional on the left? Assume isWeekday and isHoliday are Boolean variables.\n",
     "\n",
-    "![f](../images/lesson13.png)\n",
     "\n",
     "*NOTE = you can edit the variables to check the conditions needed!"
    ]
@@ -181,14 +182,12 @@
     "\n",
     "Combining both conditionals, you get option 2, which is not IsHoliday and IsWeekday. This is why option 2 is right!\n",
     "\n",
-    "![f](../images/lesson14.png)\n",
     "\n",
     "\n",
     "## Example 3 | Conditionals vs Booleans\n",
     "\n",
     "The following algorithms are intended to sum the odd numbers from 1-9. Which algorithms work as intended?\n",
     "\n",
-    "![f](../images/lesson9.png)\n",
     "\n",
     "Below, I have translated the block code into python, import this to your jupyter notebook and record the result. What do you notice?\n",
     "\n",
@@ -283,7 +282,6 @@
    "source": [
     "When we start our initializing left sum as 1 counter as 3 we had no iterations yet. Remember we're going to have to repeat this four times because the block code prompts us to repeat 4 times, so we iterate. So as we go through and follow what the block gives us.\n",
     "\n",
-    "![f](../images/lesson10.png)\n",
     "\n",
     "So you see that the sum does work, it does sum up the odd numbers from 1-9\n",
     "\n",
@@ -295,7 +293,6 @@
     "\n",
     "So we keep adding until -1, that is when the counter < 1 is true, so we stop\n",
     "\n",
-    "![f](../images/lesson12.png)\n",
     "\n",
     "So why is it important to understand that algorithms can be written in different ways and still accomplish the same task?\n",
     "\n",
@@ -303,6 +300,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -379,11 +377,11 @@
     "## Example A Possible Solution (using Selection)\n",
     "\n",
     "\n",
-    "![Flowchart for Example A](../images/3-9Lesson2ExampleAFlowchart.png)\n",
     "\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -397,7 +395,6 @@
     "\n",
     "## Example in Class\n",
     "\n",
-    "![Collatz Conjecture](../images/CollatzConjecture.jpeg)\n",
     "\n",
     "## Rules\n",
     "\n",
