all lessons changes

--- a/_notebooks/2022-11-29-G2.ipynb
+++ b/_notebooks/2022-11-29-G2.ipynb
@@ -16,6 +16,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "{% include lessonTable.html %}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## What is an Algorithm?\n",
     "\n",
     "**An algorithm:** a set of instructions that can accomplish a specific task.\n",
