--- a/_notebooks/2022-12-02-Group3a.ipynb
+++ b/_notebooks/2022-12-02-Group3a.ipynb
@@ -16,6 +16,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "{% include lessonTable.html %}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Lesson Overview: 3.5 - Boolean Expressions\n",
     "- Here we will focus on:\n",
     "    - basics of Booleans\n",
