--- a/_notebooks/2022-12-12-Simulations.ipynb
+++ b/_notebooks/2022-12-12-Simulations.ipynb
@@ -5,6 +5,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "{% include lessonTable.html %}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 3.16 Lesson\n",
     "> Lesson about simulations and what they're used for \n",
     "\n",
@@ -330,29 +338,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dy: 0.124 dx: 0.984 time: 0.1 Vfx: 0.756\n",
-      "dy: 0.151 dx: 1.969 time: 0.2 Vfx: -0.22\n",
-      "dy: 0.079 dx: 2.954 time: 0.3 Vfx: -1.20\n",
-      "dy: -0.08 dx: 3.939 time: 0.4 Vfx: -2.18\n",
-      "dy: -0.35 dx: 4.924 time: 0.5 Vfx: -3.16\n",
-      "dy: -0.72 dx: 5.908 time: 0.6 Vfx: -4.14\n",
-      "dy: -1.18 dx: 6.893 time: 0.7 Vfx: -5.12\n",
-      "dy: -1.74 dx: 7.878 time: 0.7 Vfx: -6.10\n",
-      "dy: -2.40 dx: 8.863 time: 0.8 Vfx: -7.08\n",
-      "dy: -3.16 dx: 9.848 time: 0.9 Vfx: -8.06\n",
-      "dy: -4.01 dx: 10.83 time: 1.0 Vfx: -9.04\n",
-      "dy: -4.97 dx: 11.81 time: 1.2 Vfx: -10.0\n",
-      "dy: -6.02 dx: 12.80 time: 1.3 Vfx: -11.0\n",
-      "dy: -7.17 dx: 13.78 time: 1.4 Vfx: -11.9\n",
-      "dy: -8.42 dx: 14.77 time: 1.5 Vfx: -12.9\n",
-      "dy: -9.76 dx: 15.75 time: 1.6 Vfx: -13.9\n"
+      "dy: 4.951 dx: 8.660 time: 0.1 Vfy: 49.01\n",
+      "dy: 9.804 dx: 17.32 time: 0.2 Vfy: 48.03\n",
+      "dy: 14.55 dx: 25.98 time: 0.3 Vfy: 47.05\n",
+      "dy: 19.21 dx: 34.64 time: 0.4 Vfy: 46.07\n",
+      "dy: 23.77 dx: 43.30 time: 0.5 Vfy: 45.09\n",
+      "dy: 28.23 dx: 51.96 time: 0.6 Vfy: 44.11\n",
+      "dy: 32.59 dx: 60.62 time: 0.7 Vfy: 43.13\n",
+      "dy: 36.86 dx: 69.28 time: 0.7 Vfy: 42.16\n",
+      "dy: 41.03 dx: 77.94 time: 0.8 Vfy: 41.17\n",
+      "dy: 45.09 dx: 86.60 time: 0.9 Vfy: 40.19\n",
+      "dy: 49.07 dx: 95.26 time: 1.0 Vfy: 39.21\n",
+      "dy: 52.94 dx: 103.9 time: 1.2 Vfy: 38.23\n",
+      "dy: 56.71 dx: 112.5 time: 1.3 Vfy: 37.25\n",
+      "dy: 60.39 dx: 121.2 time: 1.4 Vfy: 36.27\n",
+      "dy: 63.97 dx: 129.9 time: 1.5 Vfy: 35.29\n",
+      "dy: 67.45 dx: 138.5 time: 1.6 Vfy: 34.31\n",
+      "dy: 70.83 dx: 147.2 time: 1.7 Vfy: 33.33\n",
+      "dy: 74.12 dx: 155.8 time: 1.8 Vfy: 32.35\n",
+      "dy: 77.31 dx: 164.5 time: 1.9 Vfy: 31.37\n",
+      "dy: 80.4 dx: 173.2 time: 2.0 Vfy: 30.39\n",
+      "dy: 83.39 dx: 181.8 time: 2.1 Vfy: 29.41\n",
+      "dy: 86.28 dx: 190.5 time: 2.2 Vfy: 28.43\n",
+      "dy: 89.07 dx: 199.1 time: 2.3 Vfy: 27.45\n",
+      "dy: 91.77 dx: 207.8 time: 2.4 Vfy: 26.47\n",
+      "dy: 94.37 dx: 216.5 time: 2.5 Vfy: 25.49\n",
+      "dy: 96.87 dx: 225.1 time: 2.6 Vfy: 24.51\n",
+      "dy: 99.27 dx: 233.8 time: 2.7 Vfy: 23.53\n",
+      "dy: 101.5 dx: 242.4 time: 2.8 Vfy: 22.55\n",
+      "dy: 103.7 dx: 251.1 time: 2.9 Vfy: 21.57\n",
+      "dy: 105.9 dx: 259.8 time: 3.0 Vfy: 20.59\n",
+      "dy: 107.9 dx: 268.4 time: 3.1 Vfy: 19.61\n",
+      "dy: 109.8 dx: 277.1 time: 3.2 Vfy: 18.63\n",
+      "dy: 111.6 dx: 285.7 time: 3.3 Vfy: 17.65\n",
+      "dy: 113.3 dx: 294.4 time: 3.4 Vfy: 16.67\n",
+      "dy: 114.9 dx: 303.1 time: 3.5 Vfy: 15.69\n",
+      "dy: 116.4 dx: 311.7 time: 3.6 Vfy: 14.71\n",
+      "dy: 117.9 dx: 320.4 time: 3.7 Vfy: 13.73\n",
+      "dy: 119.2 dx: 329.0 time: 3.8 Vfy: 12.75\n",
+      "dy: 120.4 dx: 337.7 time: 3.9 Vfy: 11.77\n",
+      "dy: 121.5 dx: 346.4 time: 4.0 Vfy: 10.79\n",
+      "dy: 122.6 dx: 355.0 time: 4.1 Vfy: 9.819\n",
+      "dy: 123.5 dx: 363.7 time: 4.2 Vfy: 8.839\n",
+      "dy: 124.3 dx: 372.3 time: 4.3 Vfy: 7.859\n",
+      "dy: 125.1 dx: 381.0 time: 4.4 Vfy: 6.879\n",
+      "dy: 125.7 dx: 389.7 time: 4.5 Vfy: 5.899\n",
+      "dy: 126.3 dx: 398.3 time: 4.6 Vfy: 4.919\n",
+      "dy: 126.7 dx: 407.0 time: 4.6 Vfy: 3.939\n",
+      "dy: 127.1 dx: 415.6 time: 4.7 Vfy: 2.960\n",
+      "dy: 127.3 dx: 424.3 time: 4.8 Vfy: 1.980\n",
+      "dy: 127.4 dx: 433.0 time: 4.9 Vfy: 1.000\n",
+      "dy: 127.5 dx: 441.6 time: 5.0 Vfy: 0.020\n",
+      "dy: 127.5 dx: 450.3 time: 5.1 Vfy: -0.95\n",
+      "dy: 127.3 dx: 458.9 time: 5.2 Vfy: -1.93\n",
+      "dy: 127.1 dx: 467.6 time: 5.3 Vfy: -2.91\n",
+      "dy: 126.7 dx: 476.3 time: 5.4 Vfy: -3.89\n",
+      "dy: 126.3 dx: 484.9 time: 5.5 Vfy: -4.87\n",
+      "dy: 125.7 dx: 493.6 time: 5.6 Vfy: -5.85\n",
+      "dy: 125.1 dx: 502.2 time: 5.7 Vfy: -6.83\n",
+      "dy: 124.4 dx: 510.9 time: 5.8 Vfy: -7.81\n",
+      "dy: 123.6 dx: 519.6 time: 5.9 Vfy: -8.79\n",
+      "dy: 122.6 dx: 528.2 time: 6.0 Vfy: -9.77\n",
+      "dy: 121.6 dx: 536.9 time: 6.1 Vfy: -10.7\n",
+      "dy: 120.5 dx: 545.5 time: 6.2 Vfy: -11.7\n",
+      "dy: 119.2 dx: 554.2 time: 6.3 Vfy: -12.7\n",
+      "dy: 117.9 dx: 562.9 time: 6.4 Vfy: -13.6\n",
+      "dy: 116.5 dx: 571.5 time: 6.5 Vfy: -14.6\n",
+      "dy: 115.0 dx: 580.2 time: 6.6 Vfy: -15.6\n",
+      "dy: 113.4 dx: 588.8 time: 6.7 Vfy: -16.6\n",
+      "dy: 111.7 dx: 597.5 time: 6.8 Vfy: -17.6\n",
+      "dy: 109.9 dx: 606.2 time: 6.9 Vfy: -18.5\n",
+      "dy: 107.9 dx: 614.8 time: 7.0 Vfy: -19.5\n",
+      "dy: 105.9 dx: 623.5 time: 7.1 Vfy: -20.5\n",
+      "dy: 103.8 dx: 632.1 time: 7.2 Vfy: -21.5\n",
+      "dy: 101.6 dx: 640.8 time: 7.3 Vfy: -22.5\n",
+      "dy: 99.37 dx: 649.5 time: 7.4 Vfy: -23.4\n",
+      "dy: 96.97 dx: 658.1 time: 7.5 Vfy: -24.4\n",
+      "dy: 94.47 dx: 666.8 time: 7.6 Vfy: -25.4\n",
+      "dy: 91.88 dx: 675.4 time: 7.7 Vfy: -26.4\n",
+      "dy: 89.19 dx: 684.1 time: 7.8 Vfy: -27.4\n",
+      "dy: 86.40 dx: 692.8 time: 7.9 Vfy: -28.3\n",
+      "dy: 83.51 dx: 701.4 time: 8.0 Vfy: -29.3\n",
+      "dy: 80.52 dx: 710.1 time: 8.1 Vfy: -30.3\n",
+      "dy: 77.43 dx: 718.8 time: 8.2 Vfy: -31.3\n",
+      "dy: 74.25 dx: 727.4 time: 8.3 Vfy: -32.3\n",
+      "dy: 70.97 dx: 736.1 time: 8.4 Vfy: -33.2\n",
+      "dy: 67.59 dx: 744.7 time: 8.5 Vfy: -34.2\n",
+      "dy: 64.11 dx: 753.4 time: 8.6 Vfy: -35.2\n",
+      "dy: 60.54 dx: 762.1 time: 8.7 Vfy: -36.2\n",
+      "dy: 56.87 dx: 770.7 time: 8.8 Vfy: -37.2\n",
+      "dy: 53.10 dx: 779.4 time: 8.9 Vfy: -38.1\n",
+      "dy: 49.23 dx: 788.0 time: 9.0 Vfy: -39.1\n",
+      "dy: 45.26 dx: 796.7 time: 9.1 Vfy: -40.1\n",
+      "dy: 41.19 dx: 805.4 time: 9.2 Vfy: -41.1\n",
+      "dy: 37.03 dx: 814.0 time: 9.3 Vfy: -42.1\n",
+      "dy: 32.77 dx: 822.7 time: 9.4 Vfy: -43.0\n",
+      "dy: 28.41 dx: 831.3 time: 9.5 Vfy: -44.0\n",
+      "dy: 23.95 dx: 840.0 time: 9.6 Vfy: -45.0\n",
+      "dy: 19.40 dx: 848.7 time: 9.7 Vfy: -46.0\n",
+      "dy: 14.75 dx: 857.3 time: 9.8 Vfy: -47.0\n",
+      "dy: 10.00 dx: 866.0 time: 9.9 Vfy: -47.9\n",
+      "dy: 5.151 dx: 874.6 time: 10. Vfy: -48.9\n",
+      "dy: 0.204 dx: 883.3 time: 10. Vfy: -49.9\n",
+      "dy: -4.84 dx: 892.0 time: 10. Vfy: -50.9\n",
+      "dy: -9.98 dx: 900.6 time: 10. Vfy: -51.9\n"
      ]
     }
    ],
@@ -373,10 +469,18 @@
     "    t += 0.1\n",
     "    dy = Viy * t - 4.9 * t**2\n",
     "    dx = Vix * t\n",
-    "    Vfx = Viy - 9.8 * t\n",
+    "    Vfy = Viy - 9.8 * t\n",
     "    if (dy < -height):\n",
     "        break\n",
-    "    print(\"dy:\", str(dy)[0:5], \"dx:\", str(dx)[0:5], \"time:\", str(t)[0:3], \"Vfx:\", str(Vfx)[0:5])"
+    "    print(\"dy:\", str(dy)[0:5], \"dx:\", str(dx)[0:5], \"time:\", str(t)[0:3], \"Vfy:\", str(Vfy)[0:5])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "{% include lessonTable.html %}"
    ]
   },
   {
@@ -406,7 +510,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10 (default, Jun 22 2022, 20:18:18) \n[GCC 9.4.0]"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
