--- a/_notebooks/2022-11-30-randomvalues.ipynb
+++ b/_notebooks/2022-11-30-randomvalues.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -13,6 +14,14 @@
     "- comments: true\n",
     "- permalink: /jupyter/libraries\n",
     "- categories: [jupyter,markdown]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "{% include lessonTable.html %}"
    ]
   },
   {
@@ -376,7 +385,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.12 (main, Apr  5 2022, 06:56:58) \n[GCC 7.5.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
