--- a/_notebooks/2022-12-06-lessonComplete.ipynb
+++ b/_notebooks/2022-12-06-lessonComplete.ipynb
@@ -16,6 +16,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "{% include lessonTable.html %}"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -870,7 +878,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.12 (main, Apr  5 2022, 06:56:58) \n[GCC 7.5.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
