--- a/_notebooks/2022-12-07-developing-procedures.ipynb
+++ b/_notebooks/2022-12-07-developing-procedures.ipynb
@@ -19,6 +19,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "{% include lessonTable.html %}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Calling Procedures\n",
     "\n",
     "Slide 1:\n",
@@ -241,7 +249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.10 (default, Jun 22 2022, 20:18:18) \n[GCC 9.4.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
