liscence change (notes)

--- a/_posts/2023-02-01-Week21.md
+++ b/_posts/2023-02-01-Week21.md
@@ -56,6 +56,7 @@ title: 5.1-5.6 Notes
     - MIT -> Free use but you need to credit the author
     - GPL -> Free use but you need to use GPL too
 - You need to keep these concerns in mind when developing software for yourself or more importantly for companies. You can get sued if you don't.
+- The Liscence we will use will be GNU GPL which will allow us to use other GPL software and any of those that use our software would have to use GPL as well
 
 # 5.6 Safe Computing
 - You need to be considerate of the personal information of the users of the site that you are making. You need to take appropriate measure to protect this information from bad actors.
