--- a/_posts/2023-02-28-NatTM.md
+++ b/_posts/2023-02-28-NatTM.md
@@ -7,10 +7,10 @@ title: Night at the Museum
 ---
 
 This site was really interesting as it showed me an interesting way of keeping persistent data with a database
-![]({{ site.baseurl }}/images/cptship.HEIC "An image")
+![]({{ site.baseurl }}/images/cspship.png "An image")
 I liked the unique idea of a chatroom with this site
-![]({{ site.baseurl }}/images/cptother.HEIC "An image")
+![]({{ site.baseurl }}/images/cspother.png "An image")
 I also took a look at some other people's projects outside of computer science
-![]({{ site.baseurl }}/images/other.HEIC "An image")
+![]({{ site.baseurl }}/images/other.png "An image")
 
 In all I thought that it was an interesting experience seeing what everybody did for their project and it showed me new ways of looking at how a database could work
